<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/btn_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/logout"
            />
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/img_logo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleHeathy"
            android:layout_gravity="center"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleHeathy2"
            android:layout_gravity="center"
            android:textSize="13sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:viewportWidth="297"
                android:viewportHeight="40"
                android:hint="@string/inputEmail"
                android:textSize="15sp"
                android:paddingStart="8dp"
                android:background="@drawable/custom_edit_text_login"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/inputPassword"
                android:layout_marginTop="10dp"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:paddingStart="8dp"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:hint="@string/inputPassword"
                android:background="@drawable/custom_edit_text_login"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:textColor="@color/indigo_700"
                android:textStyle="italic"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:id="@+id/btn_login"
            android:layout_height="40dp"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" style="@style/fragmentLogin" >
            <TextView
                android:layout_height="0dp"
                android:layout_weight="0.71"
                android:layout_width="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hoặc"
            android:layout_gravity="center"
            />
        <LinearLayout android:layout_gravity="center"
            android:id="@+id/btn_login_facebook_account"
            android:layout_height="40dp"
            android:layout_width="270dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" style="@style/fragmentLogin" >
            <ImageView
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_width="25dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/facebook"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="0.71"
                android:layout_width="0dp"
                android:text="@string/facebook"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center"
            android:id="@+id/btn_login_google_account"
            android:layout_height="40dp"
            android:layout_width="270dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" style="@style/fragmentLogin" >
            <ImageView
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_width="25dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/google"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="0.71"
                android:layout_width="0dp"
                android:text="@string/google"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>