<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login"
    android:orientation="vertical">

    <ImageView
        android:layout_width="371dp"
        android:layout_height="196dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/img_logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="270dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:orientation="vertical">
        <LinearLayout android:layout_gravity="center"
            android:id="@+id/btn_login_facebook"
            android:layout_height="40dp"
            android:layout_width="270dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" style="@style/fragmentLogin" >
            <ImageView
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_width="25dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/facebook"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="0.71"
                android:layout_width="0dp"
                android:text="@string/facebook"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center"
            android:id="@+id/btn_login_google"
            android:layout_height="40dp"
            android:layout_width="270dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" style="@style/fragmentLogin" >
            <ImageView
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_width="25dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/google"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="0.71"
                android:layout_width="0dp"
                android:text="@string/google"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center"
            android:id="@+id/btn_login_account"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_width="270dp"
            android:orientation="horizontal" style="@style/fragmentLogin" >
            <ImageView
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_width="25dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/mail"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="0.71"
                android:layout_width="0dp"
                android:text="@string/account"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5sp"
                android:text="@string/dangki"
                android:textColor="@color/indigo_701"
                android:textSize="12sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>